--- a/pages/styles.modules.scss
+++ b/pages/styles.modules.scss
@@ -14,6 +14,21 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    li {
+        list-style: none;
+        animation: fadeInAnimation 1s ease-in both;
+    }
+
+    li:nth-child(2) {
+	    animation-delay: 1s;
+    }
+    li:nth-child(3) {
+        animation-delay: 2s;
+    }
+    li:nth-child(4) {
+        animation-delay: 3s;
+    }
 }
 
 footer {
@@ -128,6 +143,55 @@ code {
     margin: 0;
     font-size: 1.25rem;
     line-height: 1.5;
+}
+
+.dashboard {
+    text-align: center;
+    max-width: 90%;
+}
+
+.intro {
+    text-align: center;
+}
+
+.zipcode-form {
+    display: flex;
+    align-items: center;
+    margin-top: 2rem;
+    flex-direction: column;
+
+    @include at-sm {
+        flex-direction: row;
+    }
+}
+
+input {
+    border: 0;
+    outline: 0;
+    background: #e6e5e5;
+    font-size: 1.5rem;
+    max-width: 90%;
+    padding: 1rem;
+    margin-bottom: 1rem;
+    border-radius: 1rem;
+
+    @include at-sm {
+        margin: 0 1rem 0 0;
+    }
+}
+
+::placeholder {
+    opacity: 0.75;
+    text-align: center;
+}
+
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+     }
 }
 
 @media (max-width: 600px) {
