--- a/pages/styles.modules.scss
+++ b/pages/styles.modules.scss
@@ -1,225 +1,223 @@
 .container {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 p {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
 
 main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 
-    li {
-        list-style: none;
-        animation: fadeInAnimation 1s ease-in both;
-    }
+  li {
+    list-style: none;
+    animation: fadeInAnimation 1s ease-in both;
+  }
 
-    li:nth-child(2) {
-	    animation-delay: 1s;
-    }
+  li:nth-child(2) {
+    animation-delay: 1s;
+  }
+  li:nth-child(3) {
+    animation-delay: 2s;
+  }
+  li:nth-child(4) {
+    animation-delay: 3s;
+  }
+
+  @include at-sm {
+    padding: 1rem;
+
     li:nth-child(3) {
-        animation-delay: 2s;
+      max-width: 60%;
+      margin: 0 auto;
     }
-    li:nth-child(4) {
-        animation-delay: 3s;
-    }
+  }
 
-    @include at-sm {
-        padding: 1rem;
-
-        li:nth-child(3) {
-            max-width: 60%;
-            margin: 0 auto;
-        }
-    }
-
-    @include at-lg {
-        padding: 5rem 0;
-    }
+  @include at-lg {
+    padding: 5rem 0;
+  }
 }
 
 footer {
-    // used in Footer component
-    width: 100%;
-    height: 100px;
-    border-top: 1px solid #eaeaea;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
+  // used in Footer component
+  width: 100%;
+  height: 100px;
+  border-top: 1px solid #eaeaea;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
 }
 
 footer a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 0.5rem;
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 .buffer {
-    margin: 2rem 0;
+  margin: 2rem 0;
 
-    @include at-sm {
-        margin: 4rem 0;
-    }
+  @include at-sm {
+    margin: 4rem 0;
+  }
 }
 
 .title a {
-    color: #0070f3;
-    text-decoration: none;
+  color: #0070f3;
+  text-decoration: none;
 }
 
 .title a:hover,
 .title a:focus,
 .title a:active {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .title {
-    margin: 0;
-    line-height: 1.15;
-    font-size: 4rem;
+  margin: 0;
+  line-height: 1.15;
+  font-size: 4rem;
 }
 
 .image {
-    display: block;
-    margin: auto;
+  display: block;
+  margin: auto;
 }
 
 .title,
 .description {
-    text-align: center;
+  text-align: center;
 }
 
 .description {
-    line-height: 1.5;
-    font-size: 1.5rem;
+  line-height: 1.5;
+  font-size: 1.5rem;
 }
 
 .zipcode-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 2rem;
 }
 
 input {
-    border: 0;
-    outline: 0;
-    background: #e6e5e5;
-    font-size: 1.5rem;
-    max-width: 90%;
-    padding: 1rem;
-    margin-bottom: 1rem;
-    border-radius: 1rem;
-    text-align: center;
+  border: 0;
+  outline: 0;
+  background: #e6e5e5;
+  font-size: 1.5rem;
+  max-width: 90%;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  border-radius: 1rem;
+  text-align: center;
 
-    &.country {
-        max-width: 40%;
-        text-transform: uppercase;
-    }
+  &.country {
+    max-width: 40%;
+    text-transform: uppercase;
+  }
 }
 
 label {
-    padding-bottom: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 ::placeholder {
-    opacity: 0.75;
-    text-align: center;
-    text-transform: none;
+  opacity: 0.75;
+  text-align: center;
+  text-transform: none;
 }
 
 @keyframes fadeInAnimation {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-     }
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .text-container {
-    background-color: white;
-    text-align: center;
-    padding: 1rem;
-    margin-bottom: 1rem;
+  background-color: white;
+  text-align: center;
+  padding: 1rem;
+  margin-bottom: 1rem;
 
-    .highlight {
-        display: inline-block;
-        color: #0070f3;
-    }
+  .highlight {
+    display: inline-block;
+    color: #0070f3;
+  }
 
-    .psst {
-        color: #88898a;
-        font-size: 1rem;
-    }
+  .psst {
+    color: #88898a;
+    font-size: 1rem;
+  }
 
-    a {
-        color: orange;
-    }
+  a {
+    color: orange;
+  }
 
-    a:hover {
-        text-decoration: underline;
-    }
+  a:hover {
+    text-decoration: underline;
+  }
 
-    @include at-sm {
-        padding: 1rem 2rem;
-        border-radius: 2rem;
+  @include at-sm {
+    padding: 1rem 2rem;
+    border-radius: 2rem;
+  }
 
-    }
-
-    @include at-lg {
-        margin-bottom: 3rem;
-    }
+  @include at-lg {
+    margin-bottom: 3rem;
+  }
 }
 
 .playlist-container {
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: auto;
-    row-gap: 2rem;
-    column-gap: 1rem;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: auto;
+  row-gap: 2rem;
+  column-gap: 1rem;
 
-    @include at-sm {
-        grid-template-columns: 50% 50%;
-    }
+  @include at-sm {
+    grid-template-columns: 50% 50%;
+  }
 
-    @include at-lg {
-        grid-template-columns: 30% 30% 30%;
-        column-gap: 2rem;
-    }
+  @include at-lg {
+    grid-template-columns: 30% 30% 30%;
+    column-gap: 2rem;
+  }
 }
 
 @media (max-width: 600px) {
-    .grid {
-        width: 100%;
-        flex-direction: column;
-    }
+  .grid {
+    width: 100%;
+    flex-direction: column;
+  }
 }
 
 html,
 body {
-    padding: 0;
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
-    sans-serif;
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
