--- a/pages/styles.modules.scss
+++ b/pages/styles.modules.scss
@@ -179,6 +179,7 @@ label {
   @include at-sm {
     padding: 1rem 2rem;
     border-radius: 2rem;
+    margin-bottom: 0;
   }
 
   @include at-lg {
@@ -187,19 +188,23 @@ label {
 }
 
 .playlist-container {
-  display: grid;
-  grid-template-columns: 100%;
-  grid-template-rows: auto;
-  row-gap: 2rem;
-  column-gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 1rem;
+
+  @include at-md {
+    flex-direction: row;
+    margin-bottom: 0;
+  }
+}
+
+.playlist-widget {
+  margin: 1rem 0;
 
   @include at-sm {
-    grid-template-columns: 50% 50%;
-  }
-
-  @include at-lg {
-    grid-template-columns: 30% 30% 30%;
-    column-gap: 2rem;
+    margin: 2rem 1rem;
   }
 }
 
